--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-
+    <div class="header">
+        <nav>
+            <h1>فروشگاه کتونی نکست وان کد</h1>
+        </nav>
+        <div class="hero-img">
+            <img src="./assets/images/1555154.png" alt="">
+        </div>
+    </div>
 </body>
 
 </html>
